--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css"
 </head>
 <body>
+    <h1>HTML Forms Practice:</h1>
+    <h4>By Smith S.</h4>
+    <br>
     <fieldset>
-        <label for="name">Name</label>
+        <label for="name">Name:</label>
         <input type="text" name="" id="name" placeholder="Enter name">
     </fieldset>
+    <br>
+    <fieldset>
+        <legend>Favorite Fruit</legend>
+        <p>
+            <input type="radio" id="banana">
+            <label for="">Banana</label>
+        </p>
+        <p>
+            <input type="radio" id="apple">
+            <label for="">Apple</label>
+        </p>
+        <p>
+            <input type="radio" id="orange">
+            <label for="">Orange</label>
+        </p>
+        <p>
+            <input type="radio" id="watermelon">
+            <label for="">Watermelon</label>
+        </p>
+    </fieldset>
+    <br>
+    <fieldset>
+        <p>
+            <label for="bedtime">What time do you usually go to bed?</label>
+            <p>
+                <select>
+                    <option value="">Select an option</option>  
+                    <option>5:00pm</option>
+                    <option>8:00pm</option>
+                    <option>10:00pm</option>
+                    <option>Midnight</option>
+                    <option>What's sleep?</option>
+                </select>
+            </p>
+
+        </p>
+    </fieldset>
+    <br>
+    <p>© Copyright USA, 2021</p>
 </body>
 </html>
